css/_styles.scss
$spark-blue: #5633F4;
$spark-pink: #ff0080;
$spark-yellow: #FFF919;
$spark-red: #E72429;
$spark-orange: #FFAD19;
$spark-yellow-dark: #FFD500;
$spark-white: #FDFDFD;
$spark-beige: #F0F0F0;
$spark-black: #444444;

$page-width: 768px;

$text-light: 300;
$text-regular: 400;
$text-medium: 500;
$text-bold: 700;

html {
    height: 100%;
    font-family: system-ui, -apple-system, "Segoe UI", Tahoma;
}

body {
  height: 100%;
  min-height: 100%;
  margin:0 auto;
  line-height:1.4;
  font-size: 110%;
  color: $spark-black;
  background: $spark-white;
  padding: 0;
}

h1,h2,h3,h3,h4,h5,h6 {
    line-height: 1.2;
    margin: 0;
}

ol, ul {
    padding: 0;
    margin: 0;
    list-style: none;
}

summary:focus, details:focus {
  outline: $spark-pink solid 4px;
}

summary::-webkit-details-marker {
  display:none;
}

p {
    margin: 0 auto;
}

div > p:not(:first-child) {
    margin-top: 1rem;
}

main {
    padding: 0;
    background: $spark-beige;
    margin-top: 1rem;
    display: table;
    width: 100%;
    height: 100%;
    min-height: 100%;
}

section {
    padding: 0 0 0.5em 0;
}

section > p {
    padding: 0.5em 1em;
    max-width: $page-width;
}

div.vimeo-wrap {
  // This should mirror section > p.
  // It wraps the Vimeo iframe with similar styles
  padding: 0.5rem 0 0 0;
  max-width: $page-width;
  margin: 0 auto
}

section.donate {
  margin-top: 1rem;
}

div.donorbox-wrap {
  text-align: center;
}

div.substack-wrap {
  margin-top: 30px;
}

li > a {
    text-shadow: 0.01rem .05rem .20rem rgba(0,0,0,.6);
}

.clearfix {
    overflow: hidden;
}

.block {
    display: block;
}

.left {
    float: left;
}

.right {
    float: right;
}

.img-center {
    margin: 0 auto;
    display: block;
}

hr {
    padding-bottom: 0.5rem;
    border-left: 0;
    border-top: 0.25em solid $spark-pink;
    text-align: center;
    color: transparent;
    background-color: transparent;
}

hr.heart:after {
    content: '\002665';
    display: inline-block;
    position: relative;
    top: -20px;
    padding: 0 10px;
    background: $spark-beige;
    color: $spark-pink;
    font-size: 140%;
}

hr.sun:after {
    content: '\002600';
    display: inline-block;
    position: relative;
    top: -23px;
    padding: 0 10px;
    background: $spark-beige;
    color: $spark-pink;
    font-size: 160%;
}

hr.star:after {
    content: '\002605';
    display: inline-block;
    position: relative;
    top: -26px;
    padding: 0 10px;
    background: $spark-beige;
    color: $spark-pink;
    font-size: 160%;
}

.nav > li {
    margin-left: 0.8em;
}

.nav > li:first-child {
    margin-left: 0;
}

.nav-link {
  display: block;
  text-transform: uppercase;
  text-decoration: none;
  color: rgba(255,255,255,.75);
  font-weight: $text-bold;
  font-size: 125%;
  border-bottom-width: 0.5rem;
  border-bottom-style: solid;
  border-bottom-color: transparent;
}

.nav-link.active {
  color: $spark-white;
  border-bottom-color: $spark-red;
}

.nav-link.logo {
  color: $spark-white;
}

.nav-link:not(.logo):hover {
  border-bottom-color: $spark-red;
}

.nav-bar {
  position: relative;
  background: $spark-blue;
  padding: 0.75em 1.5em 0em 1.5em;
  box-shadow: 0px 0px 0px 7px $spark-orange, 0px 12px 0px 4px $spark-yellow;
}

.main-footer {
    background: $spark-pink;
    color: $spark-white;
    font-weight: $text-light;
    padding: 0.5em 1em;
}

.footer-nav {
    text-align: center;
}

.footer-nav > li {
    display: inline;
    text-align: center;
    margin: auto 0.5em;
}

.footer-link {
    text-decoration: none;
    font-weight: $text-bold;
    color: $spark-white;
}

.copyright {
    font-size: 70%;
    text-align: center;
    font-weight: $text-light;
    margin-top: 10px;
}

.section-heading {
    color: $spark-white;
    background: $spark-pink;
    padding: 0.5em;
    margin-bottom: 0.25em;
    text-align: center;
    text-shadow: 0.01rem .05rem .20rem rgba(0,0,0,.6);
}

.section-striped {
  background: repeating-linear-gradient(
    45deg,
    $spark-yellow-dark,
    $spark-yellow-dark 5px,
    $spark-pink 5px,
    $spark-pink 10px
  );
}

.section-striped > span {
  background: $spark-pink;
  padding: 0 0.5em;
}

.cover-background {
  background: transparent url(../img/classes/computing-literacy-controller-540@2x.jpg) repeat scroll center center;
  background-size: cover !important;
  display: table-cell;
  vertical-align: top;
}

.cover-container {
  width: 100%;
  margin-right: auto;
  margin-left: auto;
}

.cover {
  position: absolute;
  bottom: 3.5rem;
  padding: 0 2rem;

  /*float: right;*/
  text-align: right;
  /*width: 100%;*/
}

.cool-colors {
  background:  $spark-yellow-dark none repeat scroll 0% 0%;
  font-size: 245% !important;
  font-weight: $text-medium;
  color: $spark-white;
  padding: 0 1rem;
  box-shadow: 0px 0px 0px 10px $spark-orange, 16px 16px 0px 4px $spark-blue;
  text-shadow: 0.02rem 0.07rem 0.2rem rgba(44, 44, 44, 0.75);
  line-height: 1.4;
}

q:before, q:after {
    content: "";
}

.jumbotron {
  background-size: cover !important;
  min-height: 28rem;
  /*border-radius: 0;*/
  /*box-shadow: 0 0 0 0.75rem rgb(69, 208, 62);*/
  /*margin-top: 0.75rem;*/

  color: $spark-white;
  text-align: center;
  /*text-shadow: 0.01rem .05rem .20rem rgba(0,0,0,.6);*/
}

.science-cover {
  background: transparent url(../img/classes/science-literacy-540@2x.jpg) repeat scroll left center;
}

.computing-cover {
  background: transparent url(../img/classes/computing-literacy-spaceship-540@2x.jpg) repeat scroll left center;
}

.pink-cover {
  background-color: $spark-pink;
  font-size: 200%;
  font-weight: $text-bold;
  font-style: italic;
  text-transform: uppercase;
  padding-top: 6rem;
  padding-bottom: 6rem;
  border-bottom: 8px solid $spark-yellow;
  min-height: 0;

  h1 {
    line-height: 1;
  }
  h6 {
    font-weight: $text-light;
    margin-top: 0.5rem;
    text-transform: none;
  }
}

@media all and (max-width: 478px) {
  .pink-cover h1 {
      font-size: 1.5em !important;
  }
}

.program-item {
    background-color: $spark-white;
    border-left: 0.5rem solid rgb(86, 51, 244);
    padding: 0;
}

.program-item > h3 {
    color: $spark-white;
    background-color: $spark-blue;
    margin-bottom: 0;
    padding: 0.25rem 0 0.25rem 0.5rem;
    text-shadow: 0.01rem .05rem .20rem rgba(0,0,0,.6);
}

.program-item > p {
    padding: 0.5rem 0.5rem 1rem 0.5rem;
    background: $spark-white;
}

.program-item > img {
  background-color:  $spark-yellow-dark;
  border-bottom-color:  $spark-yellow-dark;
  border-bottom-style: solid;
  border-bottom-width: 0.4rem;
  border-top: 0.4rem solid $spark-pink;
}

.typeform-widget {
  border-bottom-color:  $spark-yellow;
  border-bottom-style: solid;
  border-bottom-width: 0.4rem;
}

.lead {
  font-weight: $text-bold;
  font-size: 140%;
}

.buttons {
  text-align: center;
}

a.button, summary.button {
  margin: 0.5rem;
  color: $spark-white;
  background-color: $spark-blue;
  border: 4px solid $spark-blue;
  text-align: center;
  vertical-align: middle;
  display: inline-block;
  padding: .25rem 1.5rem;
  line-height: 1.5;
  // border-radius: .25rem;
  text-decoration: none;

  font-weight: $text-bold;
  font-size: 125%;
}

// a.button:hover {
//   border-color: $spark-pink;
//   box-shadow: 0px 0px 0px 4px  $spark-yellow, 8px 8px 0px 2px $spark-orange;
// }

a.button:hover, summary.button:hover {
  border-color:  $spark-yellow;
  box-shadow: 0px 0px 0px 4px $spark-pink;
  cursor: pointer;
}

.newsletter-iframe {
  max-width: $page-width;
  margin: 1em auto 0 auto;
}

iframe.substack {
  max-width: 100%;
}

.funder-logos {
  margin: 0.5em;
}

.funder-logo {
  max-width: 100%;
  margin: 1.5em auto;
}

// Blog Styles
.post-heading {
  color: $spark-white;
  background: $spark-blue;
  padding: 0.5em;
  margin-bottom: 0.25em;
  text-align: center;
  text-shadow: 0.01rem .05rem .20rem rgba(0,0,0,.6);
}

.post-heading > a {
  color: $spark-white;
  text-decoration: none;
}

.post-heading > a:hover {
  text-decoration: underline;
  text-decoration-style: wavy;
  text-decoration-color: $spark-yellow;
}

a.post-continue, a.pagination-link, a.bold-link {
  font-weight: $text-bold;
  color: $spark-blue;
  text-decoration: none;
}

.blog-post-cover {
  background-color: $spark-pink;
  font-size: 200%;
  font-weight: $text-bold;
  min-height: 0;
  padding-top: 6rem;
  padding-bottom: 6rem;
  border-bottom: 8px solid $spark-yellow;
}

.paginated-post  {
  margin-bottom: 2rem;
}

.pagination-links {
  max-width: $page-width;
  margin: 0 auto;
  padding-top: 0.5rem;
  padding-bottom: 0.25rem;
  border-top: 0.20em solid $spark-orange;
  text-align: center;
}

.blog-post {
  padding: 0 0 0.5em 0;
  margin-bottom: 1.5rem;
}

.blog-post > p {
  padding: 0.5rem 1em 0 1em;
  max-width: $page-width;
}

.blog-post > .post-content > p {
  line-height: 1.6;
  letter-spacing: -0.02em;
  max-width: $page-width;
}

.post-header-wrap {
  background-color: $spark-pink;
}

.post-header {
  text-align: center;
  max-width: $page-width;
  margin: 0 auto;
}

.post-metadata {
  font-size: 100%;
  font-weight: $text-bold;
  text-align: center;
  padding-top: 1rem;
}

.author-role {
  font-style: italic;
}

